--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Detect Device Example</title>
+    <title>Mobile Menu</title>
     <script src='detectDevice.js'></script>
     <link rel="stylesheet" href="style.css">
   </head>
