fixed some typos

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <div>button</div>
         </nav>
         <ul class="sideBar">
-            <li class="sidebarButton">Menu 1</li>
-            <li class="sidebarButton">Menu 2</li>
-            <li class="sidebarButton">Menu 3</li>
-            <li class="sidebarButton">Menu 4</li>
-            <li class="sidebarButton">Menu 1</li>
-            <li class="sidebarButton">Menu 2</li>
-            <li class="sidebarButton">Menu 3</li>
-            <li class="sidebarButton">Menu 4</li>
+            <li class="sidebarButtons">Menu 1</li>
+            <li class="sidebarButtons">Menu 2</li>
+            <li class="sidebarButtons">Menu 3</li>
+            <li class="sidebarButtons">Menu 4</li>
+            <li class="sidebarButtons">Menu 1</li>
+            <li class="sidebarButtons">Menu 2</li>
+            <li class="sidebarButtons">Menu 3</li>
+            <li class="sidebarButtons">Menu 4</li>
             
         </ul>
       
